# wavelet

./: .env  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  pytest.ini
backend/: .env  .env.example  1~  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/docs/: COMPLETE_REFACTOR_PLAN.md  TEST_PLAN.md
backend/openfinance/: REFACTOR_PLAN.md  __init__.py
backend/openfinance/agents/: client.py  types.py
backend/openfinance/agents/bus/: __init__.py  queue.py
backend/openfinance/agents/core/: context.py  loop.py  memory.py
backend/openfinance/agents/hooks/: base.py
backend/openfinance/agents/lifecycle/: manager.py
backend/openfinance/agents/priority/: sorter.py
backend/openfinance/agents/registry/: registration.py
backend/openfinance/agents/skills/: base.py  registry.py
backend/openfinance/agents/tools/: __init__.py  builtin.py  decorator.py  mcp_server.py  registry.py
backend/openfinance/api/: main.py  websocket.py
backend/openfinance/api/middleware/: auth.py
backend/openfinance/api/routes/: analysis.py  chat.py  datacenter.py  datacenter_extended.py  dataservice.py  graph.py  intent.py  metadata.py  person.py  pipeline.py  research_reports.py  skills.py
backend/openfinance/api/service/: __init__.py  analysis_data_service.py  person_service.py
backend/openfinance/core/: __init__.py
backend/openfinance/datacenter/: __init__.py  collect_and_save.py  persistence.py  persistence.yaml
backend/openfinance/datacenter/ads/: __init__.py  repository.py  service.py
backend/openfinance/datacenter/api/: __init__.py  calendar_routes.py
backend/openfinance/datacenter/collector/: __init__.py  quant_collector.py
backend/openfinance/datacenter/config/: __init__.py
backend/openfinance/datacenter/core/: __init__.py  code_utils.py  collector_config.py  config.py  converters.py  exceptions.py  field_mapping.py  http_client.py  source_registry.py
backend/openfinance/datacenter/docs/: ARCHITECTURE.md
backend/openfinance/datacenter/graph/: __init__.py
backend/openfinance/datacenter/knowledge/: __init__.py
backend/openfinance/datacenter/marketplace/: __init__.py  gateway.py  models.py  monitoring.py  registry.py  versioning.py
backend/openfinance/datacenter/models/: __init__.py  mappings.py  orm.py
backend/openfinance/datacenter/monitoring/: __init__.py  alerts.py  metrics.py
backend/openfinance/datacenter/observability/: __init__.py  config.py  observability.yaml
backend/openfinance/datacenter/pipeline/: __init__.py  adapter.py  (+2 more)
backend/openfinance/engine/: __init__.py  entity_engine.py  factor_engine.py  relation_engine.py  strategy_engine.py
backend/openfinance/infrastructure/: __init__.py
backend/openfinance/metadata/: __init__.py  base.py  compat.py  loader.py
backend/openfinance/models/: __init__.py  agent.py  skill.py  tool.py
backend/openfinance/quant/: __init__.py
backend/openfinance/storage/: __init__.py  generic_model.py  repository.py
backend/openfinance/utils/: __init__.py  stock_code.py  web_fetch.py
backend/scripts/: compute_historical_factors.py  import_graph_data.py  migrate_json_to_db.py  quick_verify.py  sync_historical_data.py
backend/tests/: test_agent_core.py  test_api_integration.py  test_core_utilities.py  test_full_suite.py  test_multi_turn_conversation.py  test_skills.py  test_tools.py
backend/tests/test_datacenter/: __init__.py  test_datacenter_modules.py  test_integration.py
backend/workspace/sessions/: test_macro.jsonl
(+652 files in other folders)
